@@ -1,6 +1,7 @@
 package fr.nekotine.vi6clean.impl.game.phase;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
@@ -37,6 +38,7 @@ import fr.nekotine.vi6clean.impl.game.Vi6Game;
 import fr.nekotine.vi6clean.impl.map.ThiefSpawn;
 import fr.nekotine.vi6clean.impl.map.koth.EmpKothEffect;
 import fr.nekotine.vi6clean.impl.map.koth.Koth;
+import fr.nekotine.vi6clean.impl.map.koth.KothEffect;
 import fr.nekotine.vi6clean.impl.map.koth.LightKothEffect;
 import fr.nekotine.vi6clean.impl.wrapper.PlayerWrapper;
 import fr.nekotine.vi6clean.impl.wrapper.PreparationPhasePlayerWrapper;
@@ -107,7 +109,8 @@ public class Vi6PhasePreparation extends CollectionPhase<Vi6PhaseInMap,Player> i
 		}.register();
 		
 		var random = new Random();
-		var kothEffects = List.of(new EmpKothEffect(), new LightKothEffect());
+		
+		List<KothEffect> kothEffects = new ArrayList<>(Arrays.asList(new EmpKothEffect(), new LightKothEffect()));
 		List<Koth> koths = new ArrayList<>(map.getKoths().backingMap().values());
 		while(kothEffects.size() > 0 && koths.size() > 0) {
 			var indexEffect = random.nextInt(0, kothEffects.size());
